updated portfolio, etc.

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
   font-family: "Montserrat", sans-serif;
   height: 100%;
   margin: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   padding: 0;
   width: 100%;
 }
@@ -115,11 +115,20 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 24px 16px;
+  padding: 24px 18px;
   text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.container .box .button {
+  margin: 5px;
 }
 
 img.socialIcon {
   height: 30px;
   width: 30px;
+}
+
+#header a {
+  color: rgb(255,255,255)
 }
