added my content

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 * CSS file to hold styles that apply across the application
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Montserrat:wght@200;400;600;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Montserrat:wght@200;400;600;800&Merriweather:wght@300&display=swap");
 
 html,
 body {
@@ -46,9 +46,9 @@ section img.background {
 }
 
 h1 {
-  font-family: "Cormorant Garamond", serif;
+  font-family: "Merriweather", serif;
   font-size: 7rem;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 0.8;
   margin: 0;
 }
